<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#33a3dc" ><!-- 露草色 -->
	<Button 
	    android:id="@+id/btn_activity_behind_login"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_activity_behind_login_text"
	    android:layout_marginTop="50dp"
	    android:background="@drawable/button_selector" /><!-- #33a3dc -->
    <Button 
        android:id="@+id/btn_activity_behind_homepage"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_activity_behind_homepage_text"
	    android:background="@drawable/button_selector" />
    <Button 
        android:id="@+id/btn_activity_behind_settings"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_activity_behind_settings_text"
	    android:background="@drawable/button_selector" />
    <Button 
        android:id="@+id/btn_activity_behind_help"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_activity_behind_help_text"
	    android:background="@drawable/button_selector" />
    <Button 
        android:id="@+id/btn_activity_behind_teaminfo"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_activity_behind_teaminfo_text"
	    android:background="@drawable/button_selector" />
</LinearLayout>