<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="12dp">
    <TextView 
        android:id="@+id/tv_main_activity_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_main_activity_title"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        />
	<EditText 
	    android:id="@+id/edt_main_activity_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/str_edt_main_activity_username"
	    />
	<EditText 
	    android:id="@+id/edt_main_activity_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:hint="@string/str_edt_main_activity_password"
	    />
	<LinearLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	    >
	    <Button 
	        android:id="@+id/btn_main_activity_login"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/str_btn_main_activity_login"
	        />
	    <Button 
	        android:id="@+id/btn_main_activity_register"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/str_btn_main_activity_register"
	        />
	</LinearLayout>
</LinearLayout>
