<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    	<Button
        	android:id="@+id/btn_activity_t2_start_camera"
        	android:layout_width="150dp"
        	android:layout_height="wrap_content"        	
        	android:layout_gravity="center_horizontal"
        	android:textSize="22sp"
        	android:text="@string/tab2_start_camera_text" />
    	<Button
        	android:id="@+id/btn_activity_t2_select_image"
        	android:layout_width="150dp"
        	android:layout_height="wrap_content"        	
        	android:layout_gravity="center_horizontal"
        	android:textSize="22sp"
        	android:text="@string/tab2_select_image_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
         >

        <ImageView
            android:id="@+id/imgview_activity_t2_show"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_activity_t2_search"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/tab2_search_text"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>